@@ -1,3 +1,11 @@
+2007-09-10  Cosimo Cecchi  <cosimoc@svn.gnome.org>
+
+	* src/ppview-toolbar.c: (ppview_toolbar_set_window):
+
+	Forces the display of "Close print preview" on the relative toolbar
+	button in the print preview window. See bug #109063. Patch by
+	Cyril Brulebois.
+
 2007-09-09  Christian Persch  <chpe@gnome.org>
 
 	* configure.ac:
